# noter

./: Cargo.toml  TODO.md  config.toml  schema.sql
src/: app_state.rs  global_resource.rs  main.rs
src/models/: todo.rs
src/utils/: into_row.rs  mod.rs  run_async_fn.rs
src/views/: mod.rs
src/views/todo/: content_display.rs  display_all.rs  display_todo.rs  menu.rs  mod.rs
